Fixes bug with tab links 'jumping'

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ body {
 
 a {
   text-decoration: none;
+  outline: 0;
 }
 
 h1,
